# melodie

./: .env.example  .gitignore  Cargo.toml  README.md  TODO.md  deny.toml  justfile
crates/melodie-api/: Cargo.toml
crates/melodie-api/src/: bootstrap.rs  config.rs  engine.rs  error.rs  events.rs  extract.rs  health.rs  main.rs  notifier.rs  poll.rs  preflight.rs  resume.rs  router.rs  state.rs  suno.rs
crates/melodie-api/src/routes/: admin.rs  auth.rs  clips.rs  club.rs  mod.rs  songs.rs
crates/melodie-core/: Cargo.toml
crates/melodie-core/src/: authz.rs  ids.rs  lib.rs  model.rs  notif.rs
crates/melodie-db/: Cargo.toml
crates/melodie-db/migrations/: 0001_init.sql  0002_club.sql  0003_drop_suno_session.sql  0004_drop_suno_params.sql  0005_drop_tower_sessions_table.sql  0006_email_case_insensitive.sql
crates/melodie-db/src/: clips.rs  club.rs  invites.rs  lib.rs  quota.rs  songs.rs  suno_session.rs  users.rs
crates/melodie-engine/: Cargo.toml
crates/melodie-engine/examples/: bench_matmul.rs  gen_demo.rs  gen_engine.rs  gen_song.rs  lyrics_input.txt  parity_codec_full.rs  parity_detok.rs  parity_dit.rs  parity_fm.rs  parity_lm.rs  parity_lm_cfg.rs  parity_scalar.rs  tconv_repro.rs
crates/melodie-engine/reference/: golden_dump_codec.py  golden_dump_detok.py  golden_dump_lm.py  golden_dump_lm_cfg.py  lyrics_input.txt
crates/melodie-engine/reference/golden/: codec_seg0.json
crates/melodie-engine/src/: codec.rs  config.rs  engine.rs  error.rs  flow.rs  lib.rs  lm.rs  parity.rs  pipeline.rs
crates/suno-client/: Cargo.toml  LICENSE  UPSTREAM.md
crates/suno-client/src/: auth.rs  captcha.rs  error.rs  lib.rs
crates/suno-client/src/api/: billing.rs  concat.rs  cover.rs  delete.rs  feed.rs  generate.rs  lyrics.rs  metadata.rs  mod.rs  persona.rs  remaster.rs  stems.rs  types.rs
web/: astro.config.mjs  package.json
web/src/: middleware.ts
web/src/components/: Wordmark.astro
web/src/islands/: AdminClub.tsx  AdminFeed.tsx  AdminPanel.tsx  CreatePanel.tsx  ErrorBoundary.tsx  MelodieApp.tsx  SongCard.tsx  SongList.tsx
web/src/layouts/: Layout.astro
web/src/lib/: api.ts  useSongFeed.ts
web/src/pages/: admin.astro  app.astro  index.astro  login.astro  signup.astro
web/src/pages/admin/: club.astro  feed.astro
