[workspace]
resolver = "3"
members = [
    "crates/melodie-core",
    "crates/melodie-db",
    "crates/melodie-api",
    "crates/melodie-engine",
]

[workspace.package]
edition = "2024"
rust-version = "1.96"
license = "MIT"
repository = "https://github.com/uplg/melodie"
# Internal app crates, never published to crates.io.
publish = false

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "fs", "process", "net", "sync"] }

# http client
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream"] }

# http server
axum = { version = "0.8", features = ["macros", "ws"] }
tower-http = { version = "0.7", features = ["trace", "cors", "compression-gzip", "set-header"] }
tower-sessions = { version = "0.15", default-features = false, features = ["axum-core", "memory-store"] }

# db
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "tls-rustls", "sqlite", "macros", "migrate", "uuid", "chrono"] }

# serde / errors / time / ids
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }

# crypto / auth
argon2 = "0.5"
rand = "0.10"
base64 = "0.22"
# pinned exactly: 0.3.47 carries the RUSTSEC-2026-0009 fix, but 0.3.48+ changed
# `Parsable::parse`'s signature in a way `cookie` 0.18.1 (unmaintained since
# 2024, pulled in via tower-sessions' tower-cookies dep) doesn't build against.
# A caret req would silently re-break on the next `cargo update`.
time = { version = "=0.3.47", default-features = false, features = ["std", "macros", "serde"] }

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3

# Dev builds: optimize all DEPENDENCIES — candle is unusably slow at opt-level 0
# (the engine's whole compute stack lives in deps) — while the workspace crates
# stay unoptimized for fast incremental compiles and accurate debugging.
[profile.dev.package."*"]
opt-level = 3
