[package]
name = "melodie-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "melodie-api"
path = "src/main.rs"

[dependencies]
melodie-core = { path = "../melodie-core" }
melodie-db = { path = "../melodie-db" }
suno-client = { path = "../suno-client", features = ["captcha"] }

axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tower-sessions.workspace = true
tower-sessions-sqlx-store.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
figment.workspace = true
chrono.workspace = true
uuid.workspace = true
argon2.workspace = true
rand.workspace = true
base64.workspace = true
time.workspace = true
async-trait = "0.1"
anyhow = "1"
reqwest.workspace = true
async-stream = "0.3"
tokio-stream = { version = "0.1", default-features = false, features = ["sync"] }
futures-util.workspace = true
