[package]
name = "melodie-db"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
melodie-core = { path = "../melodie-core" }
sqlx.workspace = true
tokio.workspace = true
serde.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
