[package]
name = "melodie-db"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
melodie-core = { path = "../melodie-core" }
sqlx.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
