[package]
name = "melodie-engine"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# Local HeartMuLa inference engine (pure-Rust, candle) — Mélodie's music
# generator. Ported from ../heartlib-mlx (HeartMuLa LM + HeartCodec).
# See crate docs (src/lib.rs) for the phased port plan.

[dependencies]
# ML — candle with Metal backend (Apple Silicon GPU)
candle-core = { version = "0.11", features = ["metal"] }
candle-nn = { version = "0.11", features = ["metal"] }

# tokenizer (Llama-3 tokenizer.json), audio i/o
tokenizers = "0.23"
hound = "3.5"

# shared workspace deps
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
